# pyscaleio

./: .coveragerc  .flake8  .gitignore  .travis.yml  AUTHORS  ChangeLog  MANIFEST.in  Makefile  README.rst  python-scaleio.spec  requirements-test.txt  requirements.txt  setup.cfg  setup.py  tox.ini
pyscaleio/: __init__.py  client.py  config.py  constants.py  exceptions.py  manager.py  models.py  utils.py
tests/: test_client.py  test_models.py
tests/functional/: __init__.py  conftest.py  test_storage_pool.py  test_volumes.py
tests/unit/: test_client.py  test_config.py  test_models.py  test_utils.py
