[metadata]
name = pyscaleio
author = Mikhail Ushanov
author-email = gm.mephisto@gmail.com
summary = ScaleIO API client
home-page = https://github.com/gmmephisto/pyscaleio
license = GPLv3
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.4
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
keywords =
    emc
    scaleio

[files]
packages =
    pyscaleio
