[metadata]
name = pyscaleio
author = Mikhail Ushanov
author-email = gm.mephisto@gmail.com
summary = ScaleIO API client
description-file = README.rst
home-page = https://github.com/gmmephisto/pyscaleio
license = Apache Software License 2.0
classifier =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Operating System :: OS Independent
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
keywords =
    emc
    scaleio

[files]
packages =
    pyscaleio

[wheel]
universal = 1
