[metadata]
name = pyscaleio
author = Mikhail Ushanov
author-email = gm.mephisto@gmail.com
summary = ScaleIO/VxFlex API client
description-file = README.rst
home-page = https://github.com/gmmephisto/pyscaleio
license = Apache Software License 2.0
classifier =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Operating System :: OS Independent
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
keywords =
    emc
    scaleio
    vxflex

[files]
packages =
    pyscaleio

[wheel]
universal = 1
